# coursework_module3

./: README.md  pyproject.toml
coverage_report/: index.html
tests/: test_funcs.py
utils/: funcs.py
